Fix for issue #8. Set 'overflow-y' to hidden for content div.

--- a/styles/site.css
+++ b/styles/site.css
@@ -85,6 +85,7 @@
 
 .ui-content
 {
+    overflow-y:hidden;
     width:400px;
 }
 
